--- a/src/Components/User/user.css
+++ b/src/Components/User/user.css
@@ -1,6 +1,6 @@
 .header {
     text-align: center;
-    border-bottom: 1px solid #f8f8f8;
+    border-bottom: 1px solid #c2c2c2;
     height: 5rem;
     justify-content: center;
     align-items: center;
@@ -10,7 +10,7 @@
 }
 
 .header-name {
-    color: #f8f8f8;
+    color: #c2c2c2;
     margin-right: 1rem;
 }
 
@@ -29,14 +29,14 @@
     width: 328px;
     height: 35px;
     border-radius: 16px;
-    border: 2px solid #f8f8f8;
+    border: 2px solid #f1f1f1;
     padding-left: 4rem;
     font-size: 0.8rem;
     background-repeat: no-repeat;
     background-size: 20px;
     background-position: 22px;
     box-sizing: border-box;
-    color: #f8f8f8;
+    color: #c2c2c2;
     margin-right: 2rem;
 }
 
@@ -45,7 +45,7 @@
 }
 
 .member-search input::placeholder {
-    color: #F0f0f0;
+    color: #c2c2c2;
 }
 
 .member-count {
